--- a/qual-and-quant.html
+++ b/qual-and-quant.html
@@ -130,7 +130,7 @@
           <figcaption>Fig. 11 Overlooking size selection.</figcaption>
         </figure>
         <div class="content-block">
-          <p>Why did the user miss the 'Choose Size' selection? The select option isn't styled like a drop-down and the button 'Add to Cart' isn't styled like a button <span>[Fig. 12]</span>. Both these interactive elements don't have the proper affordance and increase the cognitive load on the user. Furthermore, one the user clicks on the 'Choose Size' drop-down, they are met with bizarre abbreviations for apparel sizes; SM, MD and LG. One user commented, "SM, I don’t know what that is… Small medium?".</p>
+          <p>Why did the user miss the 'Choose Size' selection? The select option isn't styled like a drop-down and the button 'Add to Cart' isn't styled like a button <span>[Fig. 12]</span>. Both these interactive elements don't have the proper affordance and increase the cognitive load on the user. Furthermore, once the user clicks on the 'Choose Size' drop-down, they are met with bizarre abbreviations for apparel sizes; SM, MD and LG. One user commented, "SM, I don’t know what that is… Small medium?".</p>
         </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/qual-and-quan/google-merch-slide11.jpg" alt="Image of selecting size.">
