--- a/qual-and-quant.html
+++ b/qual-and-quant.html
@@ -31,7 +31,7 @@
     <main>
       <div class="content-block">
         <h3>Challenge</h3>
-        <p>A case study of the <a class="link" target="_blank" rel="nofollow" href="https://shop.googlemerchandisestore.com/">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce. The timeframe of this project was 2 weeks.
+        <p>A case study of the <a class="link" target="_blank" rel="nofollow" href="https://shop.googlemerchandisestore.com/">Google Merchandise Store</a> using qualitative and quantitative research to improve the e-Commerce website. The timeframe of this project was 2 weeks.
         </p>
         <h4><span>Software used</span></h4>
         <ul>
