--- a/graphic-design.html
+++ b/graphic-design.html
@@ -29,6 +29,7 @@
     <main>
       <div class="content-block">
         <h3>Large scale print</h3>
+        <p>Large scale print for conferences around the world.</p>
       </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/graphic-design/large-print.png" alt="Hand drawn plan of the room for the design thinking workshop">
