--- a/graphic-design.html
+++ b/graphic-design.html
@@ -20,15 +20,15 @@
   </nav>
 
   <header class="content-block hero">
-    <h1>Marketing Collateral</h1>
-    <h2>Selection of marketing collateral, both print and digital</h2>
+    <h1>Graphic Design</h1>
+    <h2>Marketing collateral, both print and digital, corporate image branding and web design.</h2>
     <span class="tags">Graphic Design </span><span class="tags">Print</span><span class="tags">Digital</span>
   </header>
 
     <!-- <div class="container"> -->
     <main>
       <div class="content-block">
-        <h3>Large scale print</h3>
+        <h3>HIMSS International</h3>
         <p>Large scale print for conferences around the world.</p>
       </div>
         <figure class="wide-image">
