--- a/graphic-design.html
+++ b/graphic-design.html
@@ -48,12 +48,12 @@
         <p>Corporate image branding: Logo design, web design and UI for a network debugging proxy web app. The brief, 'This is a tool for developers... No parallax'.</p>
       </div>
       <figure class="wide-image">
-        <img class="responsive-h" src="img/graphic-design/debug-proxy.png" alt="Hand drawn plan of the room for the design thinking workshop">
-        <figcaption></figcaption>
+        <img class="responsive-h" src="img/graphic-design/debug-proxy.png" alt="debugProxy branding">
+        <figcaption>Branding for debugProxy, designed to resemble a Command Line Interface, using the Solaris colour scheme.</figcaption>
       </figure>
       <figure class="wide-image">
-          <img class="responsive-h" src="img/graphic-design/debug-proxy-console.png" alt="Hand drawn plan of the room for the design thinking workshop">
-          <figcaption></figcaption>
+          <img class="responsive-h" src="img/graphic-design/debug-proxy-console.png" alt="Picture of the debugProxy console.">
+          <figcaption>UI of debugProxy, a network debugging proxy web app.</figcaption>
         </figure>
 
       <!-- FIX THIS -->
