graphic design pages and about

--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -133,9 +133,9 @@
           </a>
         </div>
         <div class="project-next">
-          <a href="fomo-app.html">
+          <a href="graphic-design.html">
             <span class="direction">Next</span>
-            <span class="description">#1 Gr8ti-tude: Wake up happier</span>
+            <span class="description">#4 Graphic Design</span>
           </a>
         </div>
       </div>
