--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
     </div>
     <div class="card inactive">
       <div class="card-img">
+        <img src="img/graphic-design/Love_Knot_RGB.png" alt="">
+      </div>
+      <div class="card-text">
+        <p>Graphic Design</p>
+        <p><span>Marketing Collateral</span><span>Print</span><span>Digital</span><span>Web design</span><span>UI</span>
+        </p>
+      </div>
+    </div>
+    <div class="card inactive">
+      <div class="card-img">
         <img src="https://via.placeholder.com/400x300" alt="">
       </div>
       <div class="card-text">
