--- a/fomo-app.html
+++ b/fomo-app.html
@@ -205,9 +205,9 @@
     </figure>
     <div class="project-nav">
       <div class="project-prev">
-        <a href="design-thinking-workshop.html">
+        <a href="graphic-design.html">
           <span class="direction">Previous</span>
-          <span class="description">#3 Design Thinking Workshop</span>
+          <span class="description">#4 Graphic Design</span>
         </a>
       </div>
       <div class="project-next">
