--- a/graphic-design.html
+++ b/graphic-design.html
@@ -21,7 +21,7 @@
 
   <header class="content-block hero">
     <h1>Graphic Design</h1>
-    <h2>Marketing collateral, both print and digital, corporate image branding and web design.</h2>
+    <h2>Marketing collateral, corporate image branding and web design.</h2>
     <span class="tags">Graphic Design </span><span class="tags">Print</span><span class="tags">Digital</span>
   </header>
 
@@ -29,15 +29,36 @@
     <main>
       <div class="content-block">
         <h3>HIMSS International</h3>
-        <p>Large scale print for conferences around the world.</p>
+        <h4>Large scale print</h4>
+        <p>Large scale print for stages and booths at conferences around the world.</p>
       </div>
         <figure class="wide-image">
           <img class="responsive-h" src="img/graphic-design/large-print.png" alt="Hand drawn plan of the room for the design thinking workshop">
           <figcaption></figcaption>
         </figure>
+        <div class="content-block">
+        <h4>Marketing collateral</h4>
+
+      </div>
+      <figure class="wide-image">
+          <img class="responsive-h" src="img/graphic-design/marketing-collateral.png" alt="Print brochures.">
+          <figcaption>Brochures</figcaption>
+        </figure>
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/graphic-design/marketing-collateral2.png" alt="Social media collateral">
+          <figcaption>Social media collateral</figcaption>
+        </figure>
       <div class="content-block">
         <h3>Vesper Marketing</h3>
-        <p>Corporate image branding: Logo design, business card and website for a health IT marketing consultancy. The brief, ''.</p>
+        <p>Corporate image branding: Logo design, business card and website for a health IT marketing consultancy.</p>
+
+        <h4>The Brief</h4>
+        <p>The name Vesper is inspired by 2 things:</p>
+          <ul>
+            <li>The Vespa scooter – colorful, impulsive, vintage, classic, quality, southern/warm image</li>
+            <li>Vesper Lund – the true love of James Bond (Eva Green). Classy, very smart, discreet, feminine, serious, risk taker, committed, strong woman.</li>
+          </ul>
+        <!-- <p>I would like the branding to somehow be inspired by the above descriptions. Just because I work in digital health, does not mean that world needs to be boring, nerdy and grey. Am not selling a dating site, but I want the branding to be colorful, intriguing but also serious, reflecting that we are a Barcelona based company (fun, warm, colorful).</p> -->
       </div>
       <figure class="wide-image">
         <img class="responsive-h" src="img/graphic-design/vesper.png" alt="Hand drawn plan of the room for the design thinking workshop">
@@ -45,7 +66,9 @@
       </figure>
       <div class="content-block">
         <h3><span class="lowercase">debug</span>Proxy</h3>
-        <p>Corporate image branding: Logo design, web design and UI for a network debugging proxy web app. The brief, 'This is a tool for developers... No parallax'.</p>
+        <p>Corporate image branding: Logo design, web design and UI for a network debugging proxy web app.</p>
+        <h4>The Brief</h4>
+        <p> 'This is a tool for developers... No parallax'.</p>
       </div>
       <figure class="wide-image">
         <img class="responsive-h" src="img/graphic-design/debug-proxy.png" alt="debugProxy branding">
@@ -59,10 +82,10 @@
       <!-- FIX THIS -->
       <div class="project-nav">
         <div class="project-prev">
-          <a href="qual-and-quant.html">
-            <span class="direction">Previous</span>
-            <span class="description">#2 Qual &amp; Quan Informing UI</span>
-          </a>
+          <a href="design-thinking-workshop.html">
+              <span class="direction">Previous</span>
+              <span class="description">#3 Design Thinking Workshop</span>
+            </a>
         </div>
         <div class="project-next">
           <a href="fomo-app.html">
