--- a/index.html
+++ b/index.html
@@ -61,15 +61,17 @@
         </div>
       </a>
     </div>
-    <div class="card inactive">
-      <div class="card-img">
-        <img src="img/graphic-design/Love_Knot_RGB.png" alt="">
-      </div>
-      <div class="card-text">
-        <p>Graphic Design</p>
-        <p><span>Marketing Collateral</span><span>Print</span><span>Digital</span><span>Web design</span><span>UI</span>
-        </p>
-      </div>
+    <div class="card">
+      <a href="graphic-design.html">
+        <div class="card-img">
+          <img src="img/graphic-design/Love_Knot_RGB.png" alt="">
+        </div>
+        <div class="card-text">
+          <p>Graphic Design</p>
+          <p><span>Marketing Collateral</span><span>Print</span><span>Digital</span><span>Web design</span><span>UI</span>
+          </p>
+        </div>
+      </a>
     </div>
     <div class="card inactive">
       <div class="card-img">
