--- a/graphic-design.html
+++ b/graphic-design.html
@@ -29,7 +29,7 @@
     <main>
       <div class="content-block">
         <h3>HIMSS International</h3>
-        <h4>Large scale print</h4>
+        <h4><span>Large scale print</span></h4>
         <p>Large scale print for stages and booths at conferences around the world.</p>
       </div>
         <figure class="wide-image">
@@ -37,7 +37,7 @@
           <figcaption></figcaption>
         </figure>
         <div class="content-block">
-        <h4>Marketing collateral</h4>
+        <h4><span>Marketing collateral</span></h4>
 
       </div>
       <figure class="wide-image">
@@ -52,7 +52,7 @@
         <h3>Vesper Marketing</h3>
         <p>Corporate image branding: Logo design, business card and website for a health IT marketing consultancy.</p>
 
-        <h4>The Brief</h4>
+        <h4><span>The Brief</span></h4>
         <p>The name Vesper is inspired by 2 things:</p>
           <ul>
             <li>The Vespa scooter – colorful, impulsive, vintage, classic, quality, southern/warm image</li>
@@ -67,7 +67,7 @@
       <div class="content-block">
         <h3><span class="lowercase">debug</span>Proxy</h3>
         <p>Corporate image branding: Logo design, web design and UI for a network debugging proxy web app.</p>
-        <h4>The Brief</h4>
+        <h4><span>The Brief</span></h4>
         <p> 'This is a tool for developers... No parallax'.</p>
       </div>
       <figure class="wide-image">
