--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -134,10 +134,10 @@
           </a>
         </div>
         <div class="project-next">
-          <a href="graphic-design.html">
-            <span class="direction">Next</span>
-            <span class="description">#4 Graphic Design</span>
-          </a>
+          <a href="debug-proxy.html">
+              <span class="direction">Next</span>
+              <span class="description">#4 debugProxy</span>
+            </a>
         </div>
       </div>
     </main>
