--- a/graphic-design.html
+++ b/graphic-design.html
@@ -65,27 +65,11 @@
         <img class="responsive-h" src="img/graphic-design/vesper.png" alt="Hand drawn plan of the room for the design thinking workshop">
         <figcaption></figcaption>
       </figure>
-      <div class="content-block">
-        <h3><span class="lowercase">debug</span>Proxy</h3>
-        <p>Corporate image branding: Logo design, web design and UI for a network debugging proxy web app.</p>
-        <h4><span>The Brief</span></h4>
-        <p> 'This is a tool for developers... No parallax'.</p>
-      </div>
-      <figure class="wide-image">
-        <img class="responsive-h" src="img/graphic-design/debug-proxy.png" alt="debugProxy branding">
-        <figcaption>Branding for debugProxy, designed to resemble a Command Line Interface, using the Solaris colour scheme.</figcaption>
-      </figure>
-      <figure class="wide-image">
-          <img class="responsive-h" src="img/graphic-design/debug-proxy-console.png" alt="Picture of the debugProxy console.">
-          <figcaption>UI of debugProxy, a network debugging proxy web app.</figcaption>
-        </figure>
-
-      <!-- FIX THIS -->
       <div class="project-nav">
         <div class="project-prev">
-          <a href="design-thinking-workshop.html">
+          <a href="debug-proxy.html">
               <span class="direction">Previous</span>
-              <span class="description">#3 Design Thinking Workshop</span>
+              <span class="description">#4 debugProxy</span>
             </a>
         </div>
         <div class="project-next">
