--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
       </a>
     </div>
     <div class="card">
+      <a href="debug-proxy.html">
+        <div class="card-img">
+          <img src="img/debug/debug-proxy-thumb.png" alt="">
+        </div>
+        <div class="card-text">
+          <p>debugProxy UI</p>
+          <p><span>UI</span><span>Branding</span><span>Web design</span><span>React Web App</span>
+          </p>
+        </div>
+      </a>
+    </div>
+    <div class="card">
       <a href="graphic-design.html">
         <div class="card-img">
           <img src="img/graphic-design/Love_Knot_RGB.png" alt="">
@@ -73,7 +85,8 @@
         </div>
       </a>
     </div>
-    <div class="card inactive">
+
+    <!-- <div class="card inactive">
       <div class="card-img">
         <img src="https://via.placeholder.com/400x300" alt="">
       </div>
@@ -82,7 +95,7 @@
         <p><span>Come back soon</span><span>Under construction</span>
         </p>
       </div>
-    </div>
+    </div> -->
 
   </main>
   <footer>
