--- a/debug-proxy.html
+++ b/debug-proxy.html
@@ -51,10 +51,10 @@
       </div>
       <div class="project-nav">
         <div class="project-prev">
-          <a href="qual-and-quant.html">
-            <span class="direction">Previous</span>
-            <span class="description">#2 Qual &amp; Quan Informing UI</span>
-          </a>
+          <a href="design-thinking-workshop.html">
+              <span class="direction">Previous</span>
+              <span class="description">#3 Design Thinking Workshop</span>
+            </a>
         </div>
         <div class="project-next">
           <a href="graphic-design.html">
