--- a/fomo-app.html
+++ b/fomo-app.html
@@ -26,7 +26,7 @@
     <!-- <h1>Under construction</h1> -->
     <h1>Gr8ti-tude</h1>
     <h2>Wake up happier</h2>
-    <span class="tags">UX </span><span class="tags">User Interviews</span><span class="tags">Branding</span><span class="tags">Wireframes</span>
+    <span class="tags">UX</span><span class="tags">User Interviews</span><span class="tags">Branding</span><span class="tags">Wireframes</span><span class="tags">Prototyping</span>
   </header>
 
   <!-- <div class="container"> -->
@@ -205,9 +205,9 @@
     </figure>
     <div class="project-nav">
       <div class="project-prev">
-        <a href="graphic-design.html">
+        <a href="visualising-concepts.html">
           <span class="direction">Previous</span>
-          <span class="description">#4 Graphic Design</span>
+          <span class="description">#6 Visualising Conepts</span>
         </a>
       </div>
       <div class="project-next">
