--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="card-text">
           <p>Gr8ti-tude:<br>Wake up happier</p>
-          <p><span>User Interviews </span><span>Branding </span><span>Wireframes</span>
+          <p><span>User Interviews </span><span>Branding </span><span>Wireframes</span><span>Prototyping</span>
           </p>
         </div>
       </a>
@@ -67,8 +67,8 @@
           <img src="img/debug/debug-proxy-thumb.png" alt="">
         </div>
         <div class="card-text">
-          <p>debugProxy UI</p>
-          <p><span>UI</span><span>Branding</span><span>Web design</span><span>React Web App</span>
+          <p>debugProxy <br>UI</p>
+          <p><span>UI</span><span>Branding</span><span>Web Design</span><span>React Web App</span>
           </p>
         </div>
       </a>
@@ -79,8 +79,20 @@
           <img src="img/graphic-design/Love_Knot_RGB.png" alt="">
         </div>
         <div class="card-text">
-          <p>Graphic Design</p>
-          <p><span>Marketing Collateral</span><span>Print</span><span>Digital</span><span>Web design</span><span>UI</span>
+          <p>Graphic <br>Design</p>
+          <p><span>Marketing Collateral</span><span>Print</span><span>Digital</span><span>Web Design</span><span>UI</span>
+          </p>
+        </div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="visualing-concepts.html">
+        <div class="card-img">
+          <img src="img/visual/visual-thumb.png" alt="">
+        </div>
+        <div class="card-text">
+          <p>Visualising Concepts</p>
+          <p><span>Data Visualisation</span><span>Graphic Design</span><span>UX Research</span>
           </p>
         </div>
       </a>
