--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </a>
     </div>
     <div class="card">
-      <a href="visualing-concepts.html">
+      <a href="visualising-concepts.html">
         <div class="card-img">
           <img src="img/visual/visual-thumb.png" alt="">
         </div>
