visual page redtime

--- a/visualising-concepts.html
+++ b/visualising-concepts.html
@@ -60,6 +60,21 @@
         <img class="responsive-h" src="img/visual/bottom-nav-problem.png" alt="xxx">
         <figcaption>19,689 pixels need to be traversed to book a room... Stacking the pages on top of each other would be over 5m tall</figcaption>
       </figure>
+      <div class="content-block">
+        <h3>MVP: Social Media Reducing App</h3>
+      </div>
+      <figure class="wide-image">
+        <img class="responsive-h" src="img/visual/redtime.png" alt="xxx">
+        <figcaption>Intrusive app to reduce wasted time on social media</figcaption>
+      </figure>
+      <figure class="wide-image">
+        <img class="responsive-h" src="img/visual/redtime2.png" alt="xxx">
+        <figcaption>Lo-Fi wireframe exploring user flow</figcaption>
+      </figure>
+      <figure class="wide-image">
+        <img class="responsive-h" src="img/visual/redtime3.png" alt="xxx">
+        <figcaption>Lo-Fi wireframe iteration</figcaption>
+      </figure>
       <div class="project-nav">
         <div class="project-prev">
           <a href="graphic-design.html">
