--- a/graphic-design.html
+++ b/graphic-design.html
@@ -73,9 +73,9 @@
             </a>
         </div>
         <div class="project-next">
-          <a href="fomo-app.html">
+          <a href="visualising-concepts.html">
             <span class="direction">Next</span>
-            <span class="description">#1 Gr8ti-tude: Wake up happier</span>
+            <span class="description">#6 Visualising Concepts</span>
           </a>
         </div>
       </div>
