--- a/debug-proxy.html
+++ b/debug-proxy.html
@@ -24,7 +24,7 @@
     <!-- <h1>Under construction</h1> -->
     <h1>debugProxy</h1>
     <h2>UI console for debugging</h2>
-    <span class="tags">UI</span><span class="tags">Branding</span><span class="tags">Web design</span>
+    <span class="tags">UI</span><span class="tags">Branding</span><span class="tags">Web Design</span>
   </header>
 
     <main>
