--- a/graphic-design.html
+++ b/graphic-design.html
@@ -23,7 +23,7 @@
   <header class="content-block hero">
     <h1>Graphic Design</h1>
     <h2>Marketing collateral, corporate image branding and web design.</h2>
-    <span class="tags">Graphic Design </span><span class="tags">Print</span><span class="tags">Digital</span>
+    <span class="tags">Graphic Design </span><span class="tags">Print</span><span class="tags">Digital</span><span class="tags">Marketing Collateral</span><span class="tags">UI</span>
   </header>
 
     <!-- <div class="container"> -->
