--- a/visualising-concepts.html
+++ b/visualising-concepts.html
@@ -15,8 +15,8 @@
   <nav id="nav">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a class="" href="index.html#projects">Projects</a></li>
-      <li><a class="current" href="#">About</a></li>
+      <li><a class="current" href="index.html#projects">Projects</a></li>
+      <li><a class="" href="about.html">About</a></li>
     </ul>
   </nav>
 
