footer git links

--- a/visualising-concepts.html
+++ b/visualising-concepts.html
@@ -91,7 +91,7 @@
         </div>
       </div>
     </main>
-    <footer>
+   <footer>
       <div>
         <h5>Twitter</h5>
         <a class="link" target="_blank" href="https://twitter.com/D_J_Spencer">@D_J_Spencer</a>
@@ -103,6 +103,9 @@
       <div>
         <h5>Email</h5>
         <a class="link" href="mailto:davidjspencer@gmail.com">davidjspencer@gmail.com</a>
+      </div>
+      <div class="">
+        <h6>Designed and coded by David Spencer, source code available on <a class="link" href="https://github.com/davidjspencer/portfolio">Github</a>.</h6>
       </div>
     </footer>
     <script type="text/javascript" src="js/scroll.js"></script>
